# flask-wtf-polyglot

./: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  CHANGELOG.md  CHANGELOG.rst  LICENSE  MANIFEST.in  README.md  README.rst  pyproject.toml  renovate.json  setup.py
flask_wtf_polyglot/: __init__.py  form.py
tests/: test_html5.py
