[tool.poetry]
name = "Flask-WTF-Polyglot"
version = "0.4.0"
description = "Flask-WTF companion library for rendering polyglot HTML output"
license = "BSD-3-Clause"
authors = ["Clemens Kaposi <clemens@kaposi.name>"]
readme = "README.md"
repository = "https://gitlab.com/obda/flask-wtf-polyglot"
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
packages = [{include = "flask_wtf_polyglot"}]

[tool.poetry.dependencies]
python = "^3.7"
wtforms-polyglot = "^0.4.0"
flask-wtf = "^1.1.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.2"
pytest-cov = "^4.0.0"
pytest-sugar = "^0.9.6"
pre-commit = {version = "^3.1.1", python = ">=3.8"}
radon = "^6.0.0"

[tool.black]
line-length = 79
exclude = '''
/(
    \.eggs
  | \.git
  | \.tox
  | build
  | dist
)/
'''

[tool.coverage.run]
source = ["flask_wtf_polyglot/"]

[tool.coverage.report]
precision = 2
fail_under = 90.00

[tool.isort]
profile = "black"
line_length = 79
combine_as_imports = true

[tool.pytest.ini_options]
addopts = """\
    --doctest-modules \
    --cov \
    --cov-branch \
    --cov-report=term \
    --cov-report=html \
"""

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
